<resources>
    <string name="app_name">族谱</string>
    <string name="search">搜索关键词</string>
    <string name="import_data">请从SD卡中导入excel表数据</string>
    <string name="import_start">开始导入</string>
    <string name="import_instruction">导入说明</string>
    <string name="detail">成员详情</string>
    <string name="name">姓名</string>
    <string name="gender">性别</string>
    <string name="birth">生辰</string>
    <string name="old_date">去世</string>
    <string name="native_place">籍贯</string>
    <string name="mate">配偶</string>
    <string name="profession">职业</string>
    <string name="education">教育程度</string>
    <string name="address">地址</string>
    <string name="event">事迹简单描述</string>
    <string name="parent1">前一代</string>
    <string name="parent2">前二代</string>

    <string name="step_1">1、请联系本人提供表格模板，以一图片看不清，请横屏查看</string>
    <string name="step_2">2、电脑上制作好excel表格，表格的格式如下图：</string>
    <string name="step_3">3、excel表格的名称为familytree.xls</string>
    <string name="step_4">4、excel表格的另存为保存格式为excel 2003版，如下图：</string>
    <string name="step_5">5、将excel表格保存到目录：手机存储-Android/data/com.zhu.familytree/files</string>
    <string name="step_6">6、打开应用，点击‘+’导入excel表格，即可看到数据。</string>

</resources>
