<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.InstructionImportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#eeeeee"
            android:elevation="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/import_instruction" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/step_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/step_2" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin"
            android:scaleType="fitXY"
            android:src="@mipmap/a" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin"
            android:scaleType="fitXY"
            android:src="@mipmap/b" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/step_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/step_4" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="8dp"
            android:scaleType="fitXY"
            android:layout_marginEnd="@dimen/margin"
            android:src="@mipmap/c"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/step_5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin"
            android:text="@string/step_6" />

    </LinearLayout>
</ScrollView>
