<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_page_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:background="#eeeeee"
            android:elevation="8dp"
            app:contentInsetStart="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleMargin="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </androidx.appcompat.widget.Toolbar>

        <EditText
            android:id="@+id/et_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="5dp"
            android:autofillHints="@string/search"
            android:background="@drawable/bg_input_filter"
            android:drawableStart="@drawable/ic_search_black_24dp"
            android:drawablePadding="8dp"
            android:hint="@string/search"
            android:inputType="text"
            android:label="@string/search"
            android:maxLines="1"
            android:padding="8dp"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <ListView
            android:id="@+id/listView"
            style="@style/listviewstyle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_filter" />

        <FrameLayout
            android:id="@+id/empty_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_import_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_add_black_72dp"
                android:text="@string/import_data"
                android:textColor="#FF000000"
                android:textSize="18sp" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>